<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tekno.test.Choseone">


    <Button
        android:id="@+id/zainco"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:text="@string/Zain"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mtnco"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_alignStart="@+id/zainco"
        android:layout_below="@+id/zainco"
        android:layout_marginTop="55dp"
        android:text="@string/Mtn"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/sudanico"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_alignStart="@+id/mtnco"
        android:layout_below="@+id/mtnco"
        android:layout_marginTop="51dp"
        android:text="@string/Sudani"
        android:textSize="30sp"
        android:textStyle="bold"
        />


</RelativeLayout>
