<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jkl"

    >

    <EditText
        android:id="@+id/idcash"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idbtnCall"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/entramount"
        android:inputType="number"
        android:textColorHint="@color/color1"
        android:background="@drawable/sudani_button"
        />


    <EditText
        android:id="@+id/idnum"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idrasid"
        android:layout_alignStart="@+id/idcash"
        android:layout_marginBottom="90dp"
        android:ems="10"
        android:hint="@string/entrno"
        android:inputType="number"
        android:textColorHint="@color/color1"
        android:background="@drawable/sudani_button"
        />


    <Button
        android:id="@+id/idrasid"
        style="@style/Base.V7.Theme.AppCompat.Light"
        android:textColor="@color/color1"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:text="@string/baln"
        android:background="@drawable/btn"
        />

    <ImageView
        android:id="@+id/idbtnCall"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_above="@+id/idnum"
        android:layout_alignParentEnd="true"
        android:src="@drawable/lap"
        >

    </ImageView>


    <TextView
        android:id="@+id/mtnid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:text="@string/Mtn"
        android:textSize="80sp"
        android:textStyle="bold"
        android:textColor="@color/color2"

        />

</RelativeLayout>