<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/jkl"
    >



    <EditText
        android:id="@+id/idcash"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idbtnCall"
        android:layout_toStartOf="@+id/idbtnCall"
        android:background="@drawable/sudani_button"
        android:ems="10"
        android:hint="@string/entramount"
        android:inputType="number"
        android:textColorHint="@color/color1" />


    <EditText
        android:id="@+id/idnum"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idrasid"
        android:layout_marginBottom="85dp"
        android:layout_toStartOf="@+id/idbtnCall"
        android:background="@drawable/sudani_button"
        android:ems="10"
        android:hint="@string/entrno"
        android:inputType="number"
        android:textColorHint="@color/color1" />


    <Button
        android:id="@+id/idrasid"
        style="@style/Base.V7.Theme.AppCompat.Light"
        android:textColor="@color/color1"
        android:textStyle="bold"
        android:text="@string/baln"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:background="@drawable/btn"
         />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_above="@+id/idrasid"
        android:layout_marginStart="23dp"
        android:layout_toEndOf="@+id/idnum"
        android:background="@color/colorPrimary"
        android:contentDescription="FAB"
        android:backgroundTint="@color/colorPrimary"
        android:tint="@color/color1"
        android:src="@drawable/mtn_button" />


    <ImageView
        android:id="@+id/idbtnCall"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_above="@+id/idnum"
        android:layout_alignParentEnd="true"
        android:src="@drawable/lap"

        >

    </ImageView>


    <TextView
        android:id="@+id/zainid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:text="@string/Zain"
        android:textSize="80sp"
        android:textStyle="bold"
        android:textColor="@color/color3"
        />

</RelativeLayout>